Unescape notes to support html

--- a/src/main/template/operation.handlebars
+++ b/src/main/template/operation.handlebars
@@ -19,7 +19,7 @@
       <div class='content' id='{{resourceName}}_{{nickname}}_{{method}}_{{number}}_content' style='display:none'>
         {{#if notes}}
         <h4>Implementation Notes</h4>
-        <p>{{notes}}</p>
+        <p>{{{notes}}}</p>
         {{/if}}
         {{#if type}}
           <h4>Response Class</h4>
